--- a/ckanext/feedback/templates/utilization/registration.html
+++ b/ckanext/feedback/templates/utilization/registration.html
@@ -1,1 +1,134 @@
-<p>REGISTRATION</p>
+{% if h.enable_utilizations == true %}
+
+{% extends "page.html" %}
+
+{%- block page -%}
+
+  <!-- {% block skip %}
+    <div class="sr-only sr-only-focusable"><a href="#content">{{ _('Skip to content') }}</a></div>
+  {% endblock %} -->
+
+  {#
+  Override the header on a page by page basis by extending this block. If
+  making sitewide header changes it is preferable to override the header.html
+  file.
+  #}
+  {%- block header %}
+    {% include "header.html" %}
+  {% endblock -%}
+
+  {% block styles %}
+    {{ super() }}
+    {% asset 'feedback/feedback-registration-css' %}
+  {% endblock %}
+
+  {# The content block allows you to replace the content of the page if needed #}
+  {%- block content %}
+    {% block maintag %}<div class="main">{% endblock %}
+      <div id="content" class="container">
+        {% block main_content %}
+
+          {% block toolbar %}
+            <div class="toolbar" role="navigation" aria-label="{{ _('Breadcrumb') }}">
+              {% block breadcrumb %}
+                {% if self.breadcrumb_content() | trim %}
+                  <ol class="breadcrumb">
+                    {% snippet 'snippets/home_breadcrumb_item.html' %}
+                    {% block breadcrumb_content %}
+                      <li class="inactive"><a href="{{ h.url_for('utilization.search') }}">{{ _('利活用方法') }}</a></li>
+                      <li class="active"><a href="{{ h.url_for('utilization.details', utilization_id=utilization_id) }}">{{ _('詳細') }}</a></li>
+                    {% endblock %}
+                  </ol>
+                {% endif %}
+              {% endblock %}
+            </div>
+          {% endblock %}
+
+          <div class="row wrapper{% block wrapper_class %}{% endblock %}{% if self.secondary()|trim == '' or c.action=='resource_read' %} no-nav{% endif %}">
+
+            {#
+            The pre_primary block can be used to add content to before the
+            rendering of the main content columns of the page.
+            #}
+            {% block pre_primary %}
+            {% endblock %}
+
+            {% block secondary %}
+              
+            {% endblock %}
+
+            {% block primary %}
+              {% set row = resource_details %}
+              <div class="centered-content" method="get">
+                <br>
+                <table class="table table-striped table-bordered table-condensed">
+                  <thead>
+                    <th scope="col" class="left-aligned-text">Field</th>
+                    <th scope="col" class="left-aligned-text">Value</th>
+                  </thead>
+                  <tr>
+                    <td class="left-aligned-text bold">データセット</td>
+                    <td class="left-aligned-text"><a href="{{ h.url_for('dataset.search') }}{{ row.package_name }}">{{ row.package_name }}</a></td>
+                  </tr>
+                  <tr>
+                    <td class="left-aligned-text bold">データリソース</td>
+                    <td class="left-aligned-text"><a href="{{ h.url_for('dataset.search') }}{{ row.package_name }}/resource/{{ row.resource_id }}">{{ row.resource_name }}</a></td>
+                  </tr>
+                </table>
+                <hr>
+                <form name="comment_form"></form>
+                  <h4>タイトル</h4>
+                  <input type="text" class="left-aligned-text title"/>
+                  <br>
+                  <hr>
+                  <h4>内容</h4>
+                  <textarea class="form-control" cols="20" rows="5" id="comment_content" name="comment_content"></textarea>
+                  <br>
+                  <button class="btn btn-primary middle-aligned">登録</button>
+                </form>
+              </div>
+            {% endblock %}
+          </div>
+        {% endblock %}
+      </div>
+    </div>
+  {% endblock -%}
+
+  {#
+  Override the footer on a page by page basis by extending this block. If
+  making sitewide header changes it is preferable to override the footer.html-u
+  file.
+  #}
+  {%- block footer %}
+    {% include "footer.html" %}
+  {% endblock -%}
+{%- endblock -%}
+
+{%- block scripts %}
+  {% asset 'base/main' %}
+  {% asset 'base/ckan' %}
+  {% if g.tracking_enabled %}
+    {% asset 'base/tracking' %}
+  {% endif %}
+  {{ super() }}
+{% endblock -%}
+
+{% endif %}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
