--- a/ckanext/feedback/templates/utilization/registration.html
+++ b/ckanext/feedback/templates/utilization/registration.html
@@ -61,30 +61,21 @@
               {% set row = resource_details %}
               <div class="centered-content" method="get">
                 <br>
-                <table class="table table-striped table-bordered table-condensed">
-                  <thead>
-                    <th scope="col" class="left-aligned-text">Field</th>
-                    <th scope="col" class="left-aligned-text">Value</th>
-                  </thead>
-                  <tr>
-                    <td class="left-aligned-text bold">データセット</td>
-                    <td class="left-aligned-text"><a href="{{ h.url_for('dataset.search') }}{{ row.package_name }}">{{ row.package_name }}</a></td>
-                  </tr>
-                  <tr>
-                    <td class="left-aligned-text bold">データリソース</td>
-                    <td class="left-aligned-text"><a href="{{ h.url_for('dataset.search') }}{{ row.package_name }}/resource/{{ row.resource_id }}">{{ row.resource_name }}</a></td>
-                  </tr>
-                </table>
+                <h4>データセット</h4>
+                <a href="{{ h.url_for('dataset.search') }}{{ row.package_name }}">{{ row.package_name }}</a>
+                <hr>
+                <h4>データリソース</h4>
+                <a href="{{ h.url_for('dataset.search') }}{{ row.package_name }}/resource/{{ row.resource_id }}">{{ row.resource_name }}</a>
                 <hr>
                 <form name="comment_form"></form>
                   <h4>タイトル</h4>
-                  <input type="text" class="left-aligned-text title"/>
+                  <input type="text" class="title"/>
                   <br>
                   <hr>
                   <h4>内容</h4>
                   <textarea class="form-control" cols="20" rows="5" id="comment_content" name="comment_content"></textarea>
                   <br>
-                  <button class="btn btn-primary middle-aligned">登録</button>
+                  <button class="btn btn-primary right-aligned">登録</button>
                 </form>
               </div>
             {% endblock %}
