--- a/ckanext/feedback/templates/package/snippets/resource_item.html
+++ b/ckanext/feedback/templates/package/snippets/resource_item.html
@@ -1,12 +1,16 @@
 {% ckan_extends %}
 
 {% block resource_item_title %}
+  {% asset 'feedback/feedback-tooltip-css' %}
   <a class="heading" href="{{ url }}" title="{{ res.name or res.description }}">
     {{ h.resource_display_name(res) | truncate(50) }}<span class="format-label" property="dc:format" data-format="{{ res.format.lower() or 'data' }}">{{ h.get_translated(res, 'format') }}</span>
     {{ h.popular('views', res.tracking_summary.total, min=10) if res.tracking_summary }}
+  </a>
     {% if h.enable_downloads %}
+    <div class = "bubble">
       <i class="fa fa-arrow-circle-o-down"></i>
       {{ h.get_resource_downloads(res.id) or _('0') }}
+      <div class="description">ダウンロード数</div>
+    </div>
     {% endif %}
-  </a>
 {% endblock %}
