--- a/ckanext/feedback/templates/snippets/package_item.html
+++ b/ckanext/feedback/templates/snippets/package_item.html
@@ -1,12 +1,16 @@
 {% ckan_extends %}
 
 {% block resources_inner %}
+  {% asset 'feedback/feedback-tooltip-css' %}
   {% for resource in h.dict_list_reduce(package.resources, 'format') %}
     <li>
       <a href="{{ h.url_for(package.type ~ '.read', id=package.name) }}" class="label label-default" data-format="{{ resource.lower() }}">{{ resource }}</a>
       {% if h.enable_downloads %}
-        <i class="fa fa-arrow-circle-o-down"></i>
-        {{ h.get_package_downloads(package.id) or _('0') }}
+        <div class = "bubble">
+          <i class="fa fa-arrow-circle-o-down"></i>
+          {{ h.get_package_downloads(package.id) or _('0') }}
+          <div class="description">ダウンロード数</div>
+        </div>
       {% endif %}
     </li>
   {% endfor %}
