Changed labels to check checkboxes

--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -74,9 +74,9 @@
                   {% block select_status %}
                     <span class="status-label"><p>ステータス</p></span>
                     <input type="checkbox" id="waiting" name="waiting" value="False">
-                    <label for="waiting_for_approval" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
+                    <label for="waiting" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
                     <input class="spaced-left" type="checkbox" id="approval" name="approval" value="True">
-                    <label for="approved" class="normal-font-weight middle-vertical-aligned">承認済</label>
+                    <label for="approval" class="normal-font-weight middle-vertical-aligned">承認済</label>
                   </form>
                   {% endblock %}
                 {% endif %}
