Changed top menu item processing to allow filtering by module enable/disable

--- a/ckanext/feedback/templates/header.html
+++ b/ckanext/feedback/templates/header.html
@@ -86,28 +86,21 @@
       <nav class="section navigation">
         <ul class="nav nav-pills">
           {% block header_site_navigation_tabs %}
-            {% if c.userobj.sysadmin %}
-              {{ h.build_nav_main(
-                ('home.index', _('Top')),
-                ('dataset.search', _('Dataset')),
-                ('organization.index', _('Organization')),
-                ('group.index', _('Group')),
-                ('home.about', _('タグ')),
-                ('utilization.search', _('利活用方法')),
-                ('home.about', _('フィードバック一覧')),
-                ('home.about', _('About'))
-              )}}
-            {% else %}
-              {{ h.build_nav_main(
-                ('home.index', _('Top')),
-                ('dataset.search', _('Dataset')),
-                ('organization.index', _('Organization')),
-                ('group.index', _('Group')),
-                ('home.about', _('タグ')),
-                ('utilization.search', _('利活用方法')),
-                ('home.about', _('About'))
-              )}}
+            {% set menu_items = [] %}
+            {{ menu_items.append(('home.index', _('Top'))) or "" }}
+            {{ menu_items.append(('dataset.search', _('Dataset'))) or "" }}
+            {{ menu_items.append(('organization.index', _('Organization'))) or "" }}
+            {{ menu_items.append(('group.index', _('Group'))) or "" }}
+            {% if h.is_enabled_utilizations %}
+              {{ menu_items.append(('utilization.search', _('利活用方法'))) or "" }}
             {% endif %}
+            {% if c.userobj.sysadmin and h.is_enabled_resources %}
+              {{ menu_items.append(('home.about', _('フィードバック一覧'))) or "" }}
+            {% endif %}
+            {{ menu_items.append(('home.about', _('About'))) or "" }}
+            {% for item in menu_items %}
+              {{ h.build_nav_main(item)}}
+            {% endfor %}
           {% endblock %}
         </ul>
       </nav>
