--- a/ckanext/feedback/assets/css/tooltip.css
+++ b/ckanext/feedback/assets/css/tooltip.css
@@ -1,6 +1,5 @@
 .bubble{
     position: relative;
-    cursor: pointer;
     display:  inline-block;
 }
 .bubble img{
@@ -9,13 +8,15 @@
 .description {
     display: none;
     position: absolute;
-    padding: 10px;
+    bottom: 100%;  
+    padding: 5px;
     font-size: 9px;
-    line-height: 1.6em;
+    text-align: center;
+    line-height: 1.0em;
     color: #fff;
     border-radius: 5px;
     background: #000;
-    width: 100px;
+    width: 125px;
 }
  
 .description:before {
@@ -23,12 +24,12 @@
     position: absolute;
     top: 100%;
     left: 50%;
-    border: 15px solid transparent;
-    border-top: 15px solid #000;
+    border: 5px solid transparent;
+    border-top: 5px solid #000;
     margin-left: -15px;
 }
 .bubble:hover .description{
     display: inline-block;
-    top: -75px;
-    left: -50px;
+    top: -25px;
+    left: -40px;
 }
