--- a/ckanext/feedback/templates/utilization/search.html
+++ b/ckanext/feedback/templates/utilization/search.html
@@ -1,4 +1,4 @@
-{% if h.enable_utilizations %}
+{% if h.is_enabled_utilizations  %}
 
   {% extends "page.html" %}
 
@@ -17,10 +17,10 @@
       {% include "header.html" %}
     {% endblock -%}
 
-  {% block styles %}
-    {{ super() }}
-    {% asset 'feedback/feedback-search-css' %}
-  {% endblock %}
+    {% block styles %}
+      {{ super() }}
+      {% asset 'feedback/feedback-search-css' %}
+    {% endblock %}
 
     {# The content block allows you to replace the content of the page if needed #}
     {%- block content %}
@@ -36,7 +36,7 @@
                       {% snippet 'snippets/home_breadcrumb_item.html' %}
                       {% block breadcrumb_content %}
                         {{ super() }}
-                        <li class="active"><a href="http://localhost:5000/utilization/search">{{ _('利活用方法') }}</a></li>
+                        <li class="active"><a href="{{ h.url_for('utilization.search') }}">{{ _('利活用方法') }}</a></li>
                       {% endblock %}
                     </ol>
                   {% endif %}
@@ -61,18 +61,17 @@
               {% block search_by_keyword %}
                 <form class="top-centered-content" method="get">
                   <br>
-                  <p>キーワード検索</p>
+                  <h4>キーワード検索</h4>
                   <div class="input-group search-input-group">
                     <input id="field-giant-search" type="text" class="form-control input-lg" name="keyword" placeholder="{{ _('キーワード検索...') }}" aria-label="{{ _('Search utilizaton data') }}" autocomplete="off" value="{{ keyword }}"/>
                     <span class="input-group-btn">
                       <button class="btn btn-default btn-lg" type="submit" aria-label="{{ _('Submit') }}"><i class="fa fa-search"></i></button>
                     </span>
                   </div>
-                  <br>
               {% endblock %}
               {% if c.userobj.sysadmin %}
                 {% block select_status %}
-                  <span class="status-label"><p>ステータス</p></span>
+                  <span><h4>ステータス</h4>
                   <input type="checkbox" id="waiting" name="waiting" onclick="filter()">
                   <label for="waiting_for_approval" class="normal-font-weight middle-vertical-aligned">承認待ち</label>
                   <input class="spaced-left" type="checkbox" id="approval" name="approval" onclick="filter()">
@@ -82,7 +81,7 @@
               {% endif %}
               </form>
               <hr>
-              <p class="bottom-centered-content" id="data-count">検索結果：{{ utilizations|length }}件</p>
+              <h4 class="bottom-centered-content" id="data-count">検索結果：{{ utilizations|length }}件</h4>
               {% block result_table %}
                 <table class="table table-striped table-bordered table-condensed table-toggle-more bottom-centered-content" id="results-table">
                   <tr class="table-header">
@@ -96,7 +95,7 @@
                   </tr>
                   {% for row in utilizations %}
                     <tr>
-                      <td class="left-aligned-text"><a href="http://localhost:5000/dataset/{{ row.package_name }}/resource/{{ row.resource_id }}">{{ row.title }}</a>
+                      <td class="left-aligned-text"><a href="{{ h.url_for('utilization.details', utilization_id=row.id) }}">{{ row.title }}</a>
                         <img src="/images/issue_resolution_badge.png" alt="issue resolution badge" width="28" height="28"/>
                         <!-- ToDo -->  
                         <span class="spaced-left">10,000</span>
@@ -145,14 +144,13 @@
     {% endblock -%}
   {%- endblock -%}
 
-{%- block scripts %}
-  {% asset 'base/main' %}
-  {% asset 'base/ckan' %}
-  {% asset 'feedback/feedback-search-js' %}
-  {% if g.tracking_enabled %}
-    {% asset 'base/tracking' %}
-  {% endif %}
-  {{ super() }}
-{% endblock -%}
-
+  {%- block scripts %}
+    {% asset 'base/main' %}
+    {% asset 'base/ckan' %}
+    {% asset 'feedback/feedback-search-js' %}
+    {% if g.tracking_enabled %}
+      {% asset 'base/tracking' %}
+    {% endif %}
+    {{ super() }}
+  {% endblock -%}
 {% endif %}
