--- a/ckanext/feedback/templates/package/snippets/additional_info.html
+++ b/ckanext/feedback/templates/package/snippets/additional_info.html
@@ -1,10 +1,10 @@
 {% ckan_extends %}
 
 {% block package_additional_info %}
-  {% if h.is_enabled_downloads %}
+  {% if h.is_enabled_downloads(self) == True %}
     <tr>
       <th scope="row" class="dataset-label">{{ _('Download') }}</th>
-      <td class="dataset-details" property="foaf:homepage">{{ h.get_package_downloads(pkg_dict.id) or _('0') }}</td>
+      <td class="dataset-details" property="foaf:homepage">{{ h.get_package_downloads(pkg_dict.id) }}</td>
     </tr>
   {% endif %}
   {% if pkg_dict.url %}
